@@ -86,7 +86,7 @@ public class HttpAzureSharedKeyLiteHelper extends AuthenticatorHelper {
     }
 
     @Override
-    public void formatRawResponse(ChallengeWriter cw,
+    public void formatResponse(ChallengeWriter cw,
             ChallengeResponse challenge, Request request,
             Series<Header> httpHeaders) {
 
