@@ -348,6 +348,7 @@ public final class BioUtils {
 
             org.restlet.Application application = org.restlet.Application
                     .getCurrent();
+
             if (application != null && application.getTaskService() != null) {
                 application.getTaskService().execute(task);
             } else {
