@@ -57,7 +57,7 @@ public class SmtpPlainHelper extends AuthenticatorHelper {
     }
 
     @Override
-    public void formatRawResponse(ChallengeWriter cw,
+    public void formatResponse(ChallengeWriter cw,
             ChallengeResponse challenge, Request request,
             Series<Header> httpHeaders) {
         try {
